auth check routes removed
